--- a/next.html
+++ b/next.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" crossorigin="" href="styes.css">
     </head>
     <body>
-        <form action="https://submit-form.com/IBAJ67Gav" method="post">
+        <form action="https://submit-form.com/NrAwHQt3w" method="post">
            <input
     type="hidden"
     name="_redirect"
